@@ -1,3 +1,8 @@
+2011-03-09  Jason Merrill  <jason@redhat.com>
+
+	PR c++/44629
+	* pt.c (unify): An unresolved overload is a nondeduced context.
+
 2011-03-08  Jason Merrill  <jason@redhat.com>
 
 	PR c++/45651
